--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   pin_code_fields: ^8.0.1
   flutter_svg: ^2.0.17
   gap: ^3.0.1
+  dio: ^5.3.3
   date_picker_timeline: ^1.2.6
   intl: ^0.19.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
